fix: fix a sticky button flickering on mobile devices && add to about us page

--- a/frontend/src/components/organisms/header/variants/MobileHeader.module.css
+++ b/frontend/src/components/organisms/header/variants/MobileHeader.module.css
@@ -13,8 +13,14 @@
   transition: all 0.2s ease-in-out;
 }
 
-.burgerWrapper:hover {
-  color: var(--hover-components-link-fg);
+.burgerWrapper>* {
+  -webkit-tap-highlight-color: transparent;
+}
+
+@media(hover:hover) and (pointer: fine) {
+  .burgerWrapper:hover {
+    color: var(--hover-components-link-fg);
+  }
 }
 
 .burgerOverlay {
@@ -31,8 +37,12 @@
   text-wrap: nowrap;
 }
 
-.navItem:hover {
-  color: var(--hover-components-link-fg);
+
+
+@media(hover:hover) and (pointer: fine) {
+  .navItem:hover {
+    color: var(--hover-components-link-fg);
+  }
 }
 
 .contacts {
